--- a/API/RoundTheCorner.BL/RoundTheCorner.BL.csproj
+++ b/API/RoundTheCorner.BL/RoundTheCorner.BL.csproj
@@ -51,6 +51,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OrderItemManager.cs" />
+    <Compile Include="OrdersManager.cs" />
     <Compile Include="UserManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
