--- a/API/RoundTheCorner.PL/App.config
+++ b/API/RoundTheCorner.PL/App.config
@@ -9,7 +9,5 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings>
-    <add name="RoundTheCornerEntities" connectionString="metadata=res://*/RoundTheCorner.csdl|res://*/RoundTheCorner.ssdl|res://*/RoundTheCorner.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDb;initial catalog=RoundTheCorner;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
-</configuration>
+
+<connectionStrings><add name="RoundTheCornerEntities" connectionString="metadata=res://*/RoundTheCorner.csdl|res://*/RoundTheCorner.ssdl|res://*/RoundTheCorner.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;initial catalog=RoundTheCorner;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
