--- a/API/RoundTheCorner.BL/RoundTheCorner.BL.csproj
+++ b/API/RoundTheCorner.BL/RoundTheCorner.BL.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="OrderItemManager.cs" />
     <Compile Include="OrdersManager.cs" />
+    <Compile Include="ReviewManager.cs" />
     <Compile Include="UserManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
