--- a/API/RoundTheCorner.BL.Tests/RoundTheCorner.BL.Tests.csproj
+++ b/API/RoundTheCorner.BL.Tests/RoundTheCorner.BL.Tests.csproj
@@ -57,6 +57,8 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="utMenu.cs" />
+    <Compile Include="utMenuSection.cs" />
     <Compile Include="utReview.cs" />
     <Compile Include="utOrderItem.cs" />
     <Compile Include="utUser.cs" />
