--- a/API/RoundTheCorner.BL/RoundTheCorner.BL.csproj
+++ b/API/RoundTheCorner.BL/RoundTheCorner.BL.csproj
@@ -51,14 +51,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MenuManager.cs" />
-    <Compile Include="MenuSectionManager.cs" />
     <Compile Include="OrderItemManager.cs" />
-    <Compile Include="OrdersManager.cs" />
+    <Compile Include="OrderManager.cs" />
     <Compile Include="ReviewManager.cs" />
     <Compile Include="UserManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="VendorEmployeeManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
