--- a/API/RoundTheCorner.BL.Tests/RoundTheCorner.BL.Tests.csproj
+++ b/API/RoundTheCorner.BL.Tests/RoundTheCorner.BL.Tests.csproj
@@ -62,6 +62,8 @@
     <Compile Include="utOrderItem.cs" />
     <Compile Include="utUser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="utVendor.cs" />
+    <Compile Include="utVendorLocation.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
