--- a/API/RoundTheCorner.BL/RoundTheCorner.BL.csproj
+++ b/API/RoundTheCorner.BL/RoundTheCorner.BL.csproj
@@ -56,6 +56,8 @@
     <Compile Include="ReviewManager.cs" />
     <Compile Include="UserManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VendorManager.cs" />
+    <Compile Include="VendorLocationManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
