--- a/API/RoundTheCorner.BL/RoundTheCorner.BL.csproj
+++ b/API/RoundTheCorner.BL/RoundTheCorner.BL.csproj
@@ -51,6 +51,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CuisineManager.cs" />
+    <Compile Include="MenuItemManager.cs" />
     <Compile Include="OrderItemManager.cs" />
     <Compile Include="OrdersManager.cs" />
     <Compile Include="ReviewManager.cs" />
