--- a/API/RoundTheCorner.MVCUI/RoundTheCorner.MVCUI.csproj
+++ b/API/RoundTheCorner.MVCUI/RoundTheCorner.MVCUI.csproj
@@ -191,6 +191,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Authenticate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -347,7 +348,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Images\" />
-    <Folder Include="Models\" />
     <Folder Include="Views\UserViewComponent\" />
   </ItemGroup>
   <ItemGroup>
