--- a/API/RoundTheCorner.MVCUI/RoundTheCorner.MVCUI.csproj
+++ b/API/RoundTheCorner.MVCUI/RoundTheCorner.MVCUI.csproj
@@ -192,6 +192,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Authenticate.cs" />
+    <Compile Include="Models\ViewModels\MenuSectionMenuItems.cs" />
     <Compile Include="Models\ViewModels\VendorCuisineLocationRating.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -340,7 +341,6 @@
     <Content Include="Views\Shared\_ValidationScriptsPartial.cshtml" />
     <Content Include="Views\Shared\LogInBox.cshtml" />
     <Content Include="Views\User\EditUser.cshtml" />
-    <Content Include="Views\Vendor\FindFood.cshtml" />
     <Content Include="Views\Vendor\VendorRegistration.cshtml" />
     <Content Include="Views\_ViewImports.cshtml" />
     <Content Include="Views\User\LogIn.cshtml" />
