--- a/API/RoundTheCorner.BL/RoundTheCorner.BL.csproj
+++ b/API/RoundTheCorner.BL/RoundTheCorner.BL.csproj
@@ -58,6 +58,7 @@
     <Compile Include="OrderItemManager.cs" />
     <Compile Include="OrderManager.cs" />
     <Compile Include="ReviewManager.cs" />
+    <Compile Include="ShoppingCartManager.cs" />
     <Compile Include="UserManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VendorEmployeeManager.cs" />
