--- a/API/RoundTheCorner.MVCUI/RoundTheCorner.MVCUI.csproj
+++ b/API/RoundTheCorner.MVCUI/RoundTheCorner.MVCUI.csproj
@@ -282,6 +282,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Authenticate.cs" />
+    <Compile Include="Models\ViewModels\EmployeeVendorViewModel.cs" />
     <Compile Include="Models\ViewModels\ItemSectionViewModel.cs" />
     <Compile Include="Models\ViewModels\MenuMenuItemViewModel.cs" />
     <Compile Include="Models\ViewModels\MenuSectionMenuItems.cs" />
@@ -298,6 +299,7 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\Map.png" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -453,10 +455,14 @@
     <Content Include="Views\Vendor\EditSection.cshtml" />
     <Content Include="Views\Vendor\EditItem.cshtml" />
     <Content Include="Views\Vendor\CreateItem.cshtml" />
+    <Content Include="Views\Vendor\Index.cshtml" />
+    <Content Include="Views\Vendor\GetEmployees.cshtml" />
+    <Content Include="Views\Vendor\GetEmployee.cshtml" />
+    <Content Include="Views\Vendor\AddEmployee.cshtml" />
+    <Content Include="Views\Vendor\FireEmployee.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Images\" />
     <Folder Include="Views\UserViewComponent\" />
   </ItemGroup>
   <ItemGroup>
